--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <header>
 
       <div class="s1">
-      <h1 class="display-4 text-uppercase"> Discover the world with us </h1>
-      <p style="font-size: medium;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed perferendis rerum eaque eveniet vitae vero laborum illum rem inventore sapiente! </p>
+      <h1 class=""> Discover the world with us </h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed perferendis rerum eaque eveniet vitae vero laborum illum rem inventore sapiente! </p>
       <br>
       <a href="#" class="a1">Contact Us</a>
 
@@ -142,16 +142,16 @@
         <br>
         <div class="row">
 
-          <div class="col-3 meal">
+          <div class="col-md-3 col-sm-6 meal">
             <img src="Images/astemir-almov--kgrPSetNW8-unsplash.jpg" alt="">
           </div>
-          <div class="col-3 meal">
+          <div class="col-md-3 col-sm-6 meal">
             <img src="Images/city-near-mountain-during-golden-hour-2525903.jpg" alt="">
           </div>
-          <div class="col-3 meal">
+          <div class="col-md-3 col-sm-6 meal">
             <img src="Images/architecture-area-bay-bridge-356968.jpg" alt="">
           </div>
-          <div class="col-3 meal">
+          <div class="col-md-3 col-sm-6 meal">
             <img src="Images/architecture-buildings-business-city-374870.jpg" alt="">
           </div>
          
